Add possibility of multiple Bidders for strategy, create common BidderContext